--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
-<!DOCTYPE HTML>
-<<head>
-    GET USER MUSIC DATA
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Movie Ticket Booking</title>
 </head>
-<<body>
-    
-</body>
