--- a/index.html
+++ b/index.html
@@ -4,3 +4,12 @@
     <meta charset="UTF-8">
     <title>Movie Ticket Booking</title>
 </head>
+<body>
+    <header>
+        <h1>FlatDango Movies Ticket Booking</h1>
+    </header>
+    <main>
+        <div class="movie-list">
+            <!-- Film Options should show in this place -->
+        </div>
+    
