--- a/index.html
+++ b/index.html
@@ -12,4 +12,6 @@
         <div class="movie-list">
             <!-- Film Options should show in this place -->
         </div>
+        <div class="booking-form">
+            <h2>Book Your Tickets</h2>
     
