--- a/index.html
+++ b/index.html
@@ -13,5 +13,17 @@
             <!-- Film Options should show in this place -->
         </div>
         <div class="booking-form">
-            <h2>Book Your Tickets</h2>
+            <h2>Book Your Tickets</h2><form id="bookingForm">
+                <label for="movie">Select Movie:</label>
+
+
+                <select id="movie" name="movie">
+                    <!-- The Options will  load here -->
+                </select>
+
+                <label for="name">Your Name:</label>
+                <input type="text" id="name" name="name" required>
+
+                <label for="email">Your Email:</label>
+                <input type="email" id="email" name="email" required>
     
