--- a/index.html
+++ b/index.html
@@ -26,4 +26,9 @@
 
                 <label for="email">Your Email:</label>
                 <input type="email" id="email" name="email" required>
+                <label for="seats">Number of Seats:</label>
+                <input type="number" id="seats" name="seats" min="1" max="10" required>
+
+                <button type="submit">Book Now</button>
+            </form>
     
