--- a/index.html
+++ b/index.html
@@ -31,4 +31,9 @@
 
                 <button type="submit">Book Now</button>
             </form>
+        </div>
+    </main>
+    <script src="index.js"></script>
+</body>
+</html>
     
