--- a/index.html
+++ b/index.html
@@ -14,21 +14,26 @@
         </div>
         <div class="booking-form">
             <h2>Book Your Tickets</h2><form id="bookingForm">
-                <label for="movie">Select Movie:</label>
+                
+                <br><label for="movie">Select Movie:</label>
 
 
                 <select id="movie" name="movie">
                     <!-- The Options will  load here -->
                 </select>
+                <br>
 
                 <label for="name">Your Name:</label>
                 <input type="text" id="name" name="name" required>
-
+<br>
                 <label for="email">Your Email:</label>
                 <input type="email" id="email" name="email" required>
+                <br>
+                
                 <label for="seats">Number of Seats:</label>
                 <input type="number" id="seats" name="seats" min="1" max="10" required>
-
+                <br>
+                <br>
                 <button type="submit">Book Now</button>
             </form>
         </div>
